disable dark mode bug fix

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -11,6 +11,11 @@ $gray: #8E8E8E;
 
 
 /* global styles */
+
+:root {
+    color-scheme: only light;
+}
+
 html,    
     body {
     scroll-behavior: smooth;
